# ashkey-control

./: LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
docs/: feature-spec.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
